--- a/index.html
+++ b/index.html
@@ -4,105 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abraham - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #ff7a7a, #ff4c4c, #ff1c1c, #4c1c7b, #1c7b4c);
-            color: white;
-            text-align: center;
-            padding: 20px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        /* Abstract Background */
-        .background {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('abab.jpg') center/cover no-repeat, 
-                        linear-gradient(135deg, #ff7a7a, #ff4c4c, #ff1c1c, #4c1c7b, #1c7b4c);
-            opacity: 0.1;  /* Adjust opacity for watermark effect */
-            z-index: -1;
-        }
-
-        .typing-container {
-            font-size: 2rem;
-            font-weight: bold;
-            min-height: 50px;
-            border-right: 3px solid white;
-            padding: 10px;
-            display: inline-block;
-            white-space: nowrap;
-            overflow: hidden;
-        }
-
-        .contact-button {
-            margin-top: 40px;
-            padding: 15px 30px;
-            background: #ff4c4c;
-            border: none;
-            color: white;
-            font-size: 1.2rem;
-            cursor: pointer;
-            border-radius: 5px;
-        }
-
-        .contact-button:hover {
-            background: #ff1c1c;
-        }
-
-        .email-address {
-            margin-top: 20px;
-            font-size: 1.1rem;
-            color: #ff4c4c;
-        }
-
-        .email-address a {
-            color: #ff4c4c;
-            text-decoration: none;
-        }
-
-        .email-address a:hover {
-            text-decoration: underline;
+        /* Initially hide the contact form */
+        .contact-form {
+            display: none;
         }
     </style>
 </head>
 <body>
 
-    <!-- Abstract background with photo as watermark -->
     <div class="background"></div>
 
-    <!-- Typing effect text -->
     <div class="typing-container" id="typing-text"></div>
 
-    <!-- Contact button (mailto link) -->
-    <button class="contact-button" onclick="window.location.href = 'mailto:abrahamtaddese21@gmail.com?subject=Contact from Portfolio&body=Hello Abraham,%0D%0A%0D%0AWrite your message here.'">Contact Me</button>
+    <!-- Contact Button to show the form -->
+    <button class="contact-button" onclick="showContactForm()">Contact Me</button>
 
-    <!-- Email Address Display -->
     <div class="email-address">
-        <p>Or you can email me directly at: <a href="mailto:abrahamtaddese21@gmail.com">abrahamtaddese21@gmail.com</a></p>
+        <p>Or email me at: <a href="mailto:abrahamtaddese21@gmail.com">abrahamtaddese21@gmail.com</a></p>
+    </div>
+
+    <!-- Contact Form -->
+    <div class="contact-form">
+        <h2>Contact Me</h2>
+        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" enctype="multipart/form-data">
+            <input type="text" name="fullname" placeholder="Full Name" required>
+            <input type="email" name="email" placeholder="Email Address" required>
+            <input type="tel" name="phone" placeholder="Phone Number" required>
+            <textarea name="message" placeholder="Your Message" required></textarea>
+            <input type="file" name="file">
+            <button type="submit">Send Message</button>
+        </form>
     </div>
 
     <script>
         const textElement = document.getElementById("typing-text");
         const texts = ["This is Abraham", "I'm a Fullstack Developer", "I'm a Web Designer", "I'm a UI/UX Enthusiast"];
-        let textIndex = 0;
-        let charIndex = 0;
-        let isDeleting = false;
+        let textIndex = 0, charIndex = 0, isDeleting = false;
 
         function typeEffect() {
             const currentText = texts[textIndex];
@@ -119,11 +58,15 @@
                 textIndex = (textIndex + 1) % texts.length;
             }
 
-            const speed = isDeleting ? 50 : 100;
-            setTimeout(typeEffect, speed);
+            setTimeout(typeEffect, isDeleting ? 50 : 100);
         }
-
         typeEffect();
+
+        // Function to show the contact form when button is clicked
+        function showContactForm() {
+            const form = document.querySelector('.contact-form');
+            form.style.display = 'block';
+        }
     </script>
 
 </body>
