--- a/index.html
+++ b/index.html
@@ -5,34 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abraham - Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        /* Initially hide the contact form */
-        .contact-form {
-            display: none;
-        }
-    </style>
 </head>
 <body>
     <div class="background"></div>
 
+    <img src="abab.jpg" alt="Abraham" class="profile-photo">
+
     <div class="typing-container" id="typing-text"></div>
 
-    <!-- Contact Button to show the form -->
     <button class="contact-button" onclick="showContactForm()">Contact Me</button>
 
     <div class="email-address">
-        <p>Or email me at: <a href="/cdn-cgi/l/email-protection#c3a2a1b1a2aba2aeb7a2a7a7a6b0a6f1f283a4aea2aaafeda0acae"><span class="__cf_email__" data-cfemail="debfbcacbfb6bfb3aabfbababbadbbecef9eb9b3bfb7b2f0bdb1b3">[email&#160;protected]</span></a></p>
+        <p>Or email me at: <a href="/cdn-cgi/l/email-protection#c3a2a1b1a2aba2aeb7a2a7a7a6b0a6f1f283a4aea2aaafeda0acae"><span class="__cf_email__" data-cfemail="debfbcacbfb6bfb3aabfbababbadbbecef9eb9b3bfb7b2f0bdb1b3">[email protected]</span></a></p>
     </div>
 
-    <!-- Updated Contact Form -->
     <div class="contact-form">
         <h2>Contact Me</h2>
-        <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST" enctype="multipart/form-data" onsubmit="handleSubmit(event)">
+        <form action="https://formspree.io/f/xgvawpkn" method="POST" enctype="multipart/form-data" onsubmit="handleSubmit(event)">
             <input type="text" name="fullname" placeholder="Full Name" required>
-            <input type="text" name="subject" placeholder="Subject" required>
             <input type="email" name="email" placeholder="Email Address" required>
+            <input type="text" name="subject" placeholder="Subject" required>
             <textarea name="message" placeholder="Your Message" required></textarea>
-            <input type="hidden" name="reply" value="yes"> <!-- Request a reply -->
+            <input type="hidden" name="reply" value="yes">
             <button type="submit">Send Message</button>
         </form>
         <p id="submitMessage" style="display:none; color: #00ffcc;">Thank you! I’ll reply soon.</p>
@@ -40,7 +34,7 @@
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         const textElement = document.getElementById("typing-text");
-        const texts = ["This is Abraham", "I'm a Fullstack Developer", "I'm a Web Designer", "I'm a UI/UX Enthusiast"];
+        const texts = ["I am a Full Stack Web Developer", " Architectural Drafter", "Graphics Designer", "Video Editorr", "Interior Designer", "Copywriter"];
         let textIndex = 0, charIndex = 0, isDeleting = false;
 
         function typeEffect() {
@@ -63,15 +57,13 @@
         }
         typeEffect();
 
-        // Function to show the contact form when button is clicked
         function showContactForm() {
             const form = document.querySelector('.contact-form');
             form.style.display = 'block';
         }
 
-        // Handle form submission
         function handleSubmit(event) {
-            event.preventDefault(); // Prevent default form submission
+            event.preventDefault();
             const form = event.target;
             const submitMessage = document.getElementById("submitMessage");
             fetch(form.action, {
@@ -82,20 +74,19 @@
                 }
             }).then(response => {
                 if (response.ok) {
-                    form.style.display = 'none'; // Hide form
-                    submitMessage.style.display = 'block'; // Show thank you message
+                    form.style.display = 'none';
+                    submitMessage.style.display = 'block';
                     setTimeout(() => {
                         submitMessage.style.display = 'none';
-                        form.reset(); // Reset form
-                        form.style.display = 'block'; // Show form again
-                    }, 3000); // Hide after 3 seconds
+                        form.reset();
+                        form.style.display = 'block';
+                    }, 3000);
                 }
             }).catch(error => {
                 alert("Error sending message. Please try again.");
             });
         }
 
-        // Function to play typing sound
         function playTypingSound() {
             const audio = new Audio('typing-sound.mp3');
             audio.play();
