--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abraham - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
 <body>
     <div class="background"></div>
 
     <img src="abab.jpg" alt="Abraham" class="profile-photo">
+
+    <div class="title">My Professions</div>
 
     <div class="typing-container" id="typing-text"></div>
 
@@ -34,8 +28,8 @@
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         const textElement = document.getElementById("typing-text");
-        const texts = ["I am a Full Stack Web Developer", "I am a Subject Matter Expert", "I am an Architectural Drafter", "I am a Structural Engineer", "I am an Interior Designer", "I am a Copywriter"];
-        let textIndex = 0, charIndex = 0, isDeleting = false;
+        const texts = ["I am a Full Stack Web Developer", "Graphics Designer", "Architectural Drafter", "Interior Designer", "Copywriter"];
+        let textIndex = 0, charIndex = 0, isDeleting = false, audio = null;
 
         function typeEffect() {
             const currentText = texts[textIndex];
@@ -43,14 +37,19 @@
                 textElement.textContent = currentText.substring(0, charIndex--);
             } else {
                 textElement.textContent = currentText.substring(0, charIndex++);
-                playTypingSound();
+                if (charIndex === 1 && !audio) {
+                    audio = new Audio('typing-sound.mp3');
+                    audio.play();
+                }
             }
 
             if (!isDeleting && charIndex === currentText.length) {
+                if (audio) audio.pause(); // Stop sound when done
                 setTimeout(() => isDeleting = true, 1000);
             } else if (isDeleting && charIndex === 0) {
                 isDeleting = false;
                 textIndex = (textIndex + 1) % texts.length;
+                audio = null; // Reset audio for next text
             }
 
             setTimeout(typeEffect, isDeleting ? 50 : 100);
@@ -86,186 +85,8 @@
                 alert("Error sending message. Please try again.");
             });
         }
-
-        function playTypingSound() {
-            const audio = new Audio('typing-sound.mp3');
-            audio.play();
-        }
-    </script>
-
-    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'91cc293e4c47bcb4',t:'MTc0MTM3MjE5NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
-</body>
-</html><<<<<<< HEAD
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abraham - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="background"></div>
-
-    <img src="abab.jpg" alt="Abraham" class="profile-photo">
-
-    <div class="typing-container" id="typing-text"></div>
-
-    <button class="contact-button" onclick="showContactForm()">Contact Me</button>
-
-    <div class="email-address">
-        <p>Or email me at: <a href="/cdn-cgi/l/email-protection#c3a2a1b1a2aba2aeb7a2a7a7a6b0a6f1f283a4aea2aaafeda0acae"><span class="__cf_email__" data-cfemail="debfbcacbfb6bfb3aabfbababbadbbecef9eb9b3bfb7b2f0bdb1b3">[email protected]</span></a></p>
-    </div>
-
-    <div class="contact-form">
-        <h2>Contact Me</h2>
-        <form action="https://formspree.io/f/xgvawpkn" method="POST" enctype="multipart/form-data" onsubmit="handleSubmit(event)">
-            <input type="text" name="fullname" placeholder="Full Name" required>
-            <input type="email" name="email" placeholder="Email Address" required>
-            <input type="text" name="subject" placeholder="Subject" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <input type="hidden" name="reply" value="yes">
-            <button type="submit">Send Message</button>
-        </form>
-        <p id="submitMessage" style="display:none; color: #00ffcc;">Thank you! I’ll reply soon.</p>
-    </div>
-
-    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
-        const textElement = document.getElementById("typing-text");
-        const texts = ["I am a Full Stack Web Developer", " Architectural Drafter", "Graphics Designer", "Video Editorr", "Interior Designer", "Copywriter"];
-        let textIndex = 0, charIndex = 0, isDeleting = false;
-
-        function typeEffect() {
-            const currentText = texts[textIndex];
-            if (isDeleting) {
-                textElement.textContent = currentText.substring(0, charIndex--);
-            } else {
-                textElement.textContent = currentText.substring(0, charIndex++);
-                playTypingSound();
-            }
-
-            if (!isDeleting && charIndex === currentText.length) {
-                setTimeout(() => isDeleting = true, 1000);
-            } else if (isDeleting && charIndex === 0) {
-                isDeleting = false;
-                textIndex = (textIndex + 1) % texts.length;
-            }
-
-            setTimeout(typeEffect, isDeleting ? 50 : 100);
-        }
-        typeEffect();
-
-        function showContactForm() {
-            const form = document.querySelector('.contact-form');
-            form.style.display = 'block';
-        }
-
-        function handleSubmit(event) {
-            event.preventDefault();
-            const form = event.target;
-            const submitMessage = document.getElementById("submitMessage");
-            fetch(form.action, {
-                method: 'POST',
-                body: new FormData(form),
-                headers: {
-                    'Accept': 'application/json'
-                }
-            }).then(response => {
-                if (response.ok) {
-                    form.style.display = 'none';
-                    submitMessage.style.display = 'block';
-                    setTimeout(() => {
-                        submitMessage.style.display = 'none';
-                        form.reset();
-                        form.style.display = 'block';
-                    }, 3000);
-                }
-            }).catch(error => {
-                alert("Error sending message. Please try again.");
-            });
-        }
-
-        function playTypingSound() {
-            const audio = new Audio('typing-sound.mp3');
-            audio.play();
-        }
     </script>
 
     <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'91cc293e4c47bcb4',t:'MTc0MTM3MjE5NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abraham - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        /* Initially hide the contact form */
-        .contact-form {
-            display: none;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="background"></div>
-
-    <div class="typing-container" id="typing-text"></div>
-
-    <!-- Contact Button to show the form -->
-    <button class="contact-button" onclick="showContactForm()">Contact Me</button>
-
-    <div class="email-address">
-        <p>Or email me at: <a href="mailto:abrahamtaddese21@gmail.com">abrahamtaddese21@gmail.com</a></p>
-    </div>
-
-    <!-- Contact Form -->
-    <div class="contact-form">
-        <h2>Contact Me</h2>
-        <form action="https://formspree.io/f/xgvawpkn" method="POST" enctype="multipart/form-data">
-            <input type="text" name="fullname" placeholder="Full Name" required>
-            <input type="email" name="email" placeholder="Email Address" required>
-            <input type="tel" name="phone" placeholder="Phone Number" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <input type="file" name="file">
-            <button type="submit">Send Message</button>
-        </form>
-    </div>
-
-    <script>
-        const textElement = document.getElementById("typing-text");
-        const texts = ["This is Abraham", "I'm a Fullstack Developer", "I'm a Web Designer", "I'm a UI/UX Enthusiast"];
-        let textIndex = 0, charIndex = 0, isDeleting = false;
-
-        function typeEffect() {
-            const currentText = texts[textIndex];
-            if (isDeleting) {
-                textElement.textContent = currentText.substring(0, charIndex--);
-            } else {
-                textElement.textContent = currentText.substring(0, charIndex++);
-            }
-
-            if (!isDeleting && charIndex === currentText.length) {
-                setTimeout(() => isDeleting = true, 1000);
-            } else if (isDeleting && charIndex === 0) {
-                isDeleting = false;
-                textIndex = (textIndex + 1) % texts.length;
-            }
-
-            setTimeout(typeEffect, isDeleting ? 50 : 100);
-        }
-        typeEffect();
-
-        // Function to show the contact form when button is clicked
-        function showContactForm() {
-            const form = document.querySelector('.contact-form');
-            form.style.display = 'block';
-        }
-    </script>
-
-</body>
-</html>
->>>>>>> 7ee0713293e3767b30892e33cdce85a2e8579195
