--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abraham - Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <div class="background"></div>
 
@@ -13,7 +21,7 @@
         <p>Or email me at: <a href="/cdn-cgi/l/email-protection#c3a2a1b1a2aba2aeb7a2a7a7a6b0a6f1f283a4aea2aaafeda0acae"><span class="__cf_email__" data-cfemail="debfbcacbfb6bfb3aabfbababbadbbecef9eb9b3bfb7b2f0bdb1b3">[email protected]</span></a></p>
     </div>
 
-    <div class="contact-form">
+    <div class="contact-form" style="display: none;">
         <h2>Contact Me</h2>
         <form action="https://formspree.io/f/xgvawpkn" method="POST" enctype="multipart/form-data" onsubmit="handleSubmit(event)">
             <input type="text" name="fullname" placeholder="Full Name" required>
@@ -26,10 +34,21 @@
         <p id="submitMessage" style="display:none; color: #00ffcc;">Thank you! I’ll reply soon.</p>
     </div>
 
+    <div class="submissions">
+        <h3>Recent Submissions</h3>
+        <div id="submissionList"></div>
+    </div>
+
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         const textElement = document.getElementById("typing-text");
-        const texts = ["I am a Full Stack Web Developer", "Graphics Designer", "Architectural Drafter", "Interior Designer", "Copywriter"];
+        const texts = ["I am a Full Stack Web Developer", "Graphics Designer", "Architectural Drafter", "Interior Designer", "I am a Copywriter"];
         let textIndex = 0, charIndex = 0, isDeleting = false, audio = null;
+        const submissions = []; // Store form submissions
+
+        // Start typing effect on page load
+        window.onload = function() {
+            typeEffect();
+        };
 
         function typeEffect() {
             const currentText = texts[textIndex];
@@ -54,7 +73,6 @@
 
             setTimeout(typeEffect, isDeleting ? 50 : 100);
         }
-        typeEffect();
 
         function showContactForm() {
             const form = document.querySelector('.contact-form');
@@ -65,9 +83,32 @@
             event.preventDefault();
             const form = event.target;
             const submitMessage = document.getElementById("submitMessage");
+            const submissionList = document.getElementById("submissionList");
+
+            // Collect form data
+            const formData = new FormData(form);
+            const submission = {
+                fullName: formData.get("fullname"),
+                email: formData.get("email"),
+                message: formData.get("message")
+            };
+            submissions.push(submission);
+
+            // Display the submission
+            const submissionEntry = document.createElement("div");
+            submissionEntry.classList.add("submission-entry");
+            submissionEntry.innerHTML = `
+                <p><strong>Name:</strong> ${submission.fullName}</p>
+                <p><strong>Email:</strong> ${submission.email}</p>
+                <p><strong>Message:</strong> ${submission.message}</p>
+                <hr>
+            `;
+            submissionList.prepend(submissionEntry);
+
+            // Send to Formspree
             fetch(form.action, {
                 method: 'POST',
-                body: new FormData(form),
+                body: formData,
                 headers: {
                     'Accept': 'application/json'
                 }
@@ -78,7 +119,7 @@
                     setTimeout(() => {
                         submitMessage.style.display = 'none';
                         form.reset();
-                        form.style.display = 'block';
+                        form.style.display = 'none';
                     }, 3000);
                 }
             }).catch(error => {
@@ -88,5 +129,6 @@
     </script>
 
     <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'91cc293e4c47bcb4',t:'MTc0MTM3MjE5NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'91f46d86fb17bfec',t:'MTc0MTc5NDQyMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
